--- a/scss/style.css
+++ b/scss/style.css
@@ -6,12 +6,10 @@ body {
   margin: 0;
   background-color: rgb(196, 193, 161);
 }
-
 body a {
   text-decoration: none;
   color: black;
 }
-
 body p {
   font-size: 20px;
 }
@@ -48,32 +46,26 @@ header {
   align-items: center;
   padding: 15px;
 }
-
 header .logo {
   width: 500px;
   margin-right: 30px;
   margin-top: 30px;
 }
-
 header .logo-nombre {
   display: flex;
   margin-bottom: 150px;
 }
-
 header nav {
   display: flex;
   justify-content: center;
   justify-content: space-evenly;
 }
-
 header nav a {
   color: rgb(255, 216, 40);
 }
-
 header nav a:hover {
   color: rgb(14, 134, 44);
 }
-
 header ul {
   display: flex;
   flex-direction: row;
@@ -82,7 +74,6 @@ header ul {
   font-size: 20px;
   list-style-type: none;
 }
-
 header li {
   display: flex;
   justify-content: space-between;
@@ -93,14 +84,12 @@ main {
   margin: 20px;
   padding: 30px;
 }
-
 main h2 {
   font-size: 70px;
   color: rgb(10, 41, 10);
   margin-top: 10px;
   margin-left: 10px;
 }
-
 main section {
   margin: 20px;
   padding: 30px;
@@ -240,6 +229,4 @@ main section {
   height: 50px;
   width: 100px;
   color: white;
-} 
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
